--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">TimerPickerPlayground</string>
     <string name="action_settings">Settings</string>
     <string name="show">Show</string>
+    <string name="timer">Timer</string>
+    <string name="start_timer">Start</string>
+    <string name="pause_timer">Pause</string>
+    <string-array name="delimiter_strings">
+        <item>HMS</item>
+        <item>Punctuation</item>
+    </string-array>
+
 </resources>
